@@ -1,3 +1,8 @@
+2007-04-20  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	* catopen.c (mc_open): Catch unopened file; return failed status.
+	* mcsource.c (mc_source): Kill MSGTEXT state, after NL at EOF.
+
 2007-04-06  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Initial import of module catgets.
